--- a/_posts/2018-01-28-srp.md
+++ b/_posts/2018-01-28-srp.md
@@ -16,6 +16,13 @@ Starting with the **S** in **S**OLID...
 - I stands for Interface Segregation Principle (ISP)
 - D stands for Dependency Inversion Principle (DIP)
 
+# Background
+You should read my posts on the other SOLID principles for a good understanding.
+
+1. [Single Responsibility Principle]({% post_url 2018-01-28-srp %})
+2. [Open/Closed Principle]({% post_url 2018-01-30-ocp %})
+3. [Liskov Substitution Principle]({% post_url 2018-02-01-lsp %})
+
 # Understanding the Single Responsibility Principle
 SRP states that every module or class in an application should have exactly 1 responsibility, and therefore only 1 reason to change. This sounds pretty simple, but achieving that simplicity can get tricky at times. To best understand this principle, let's break it down into its smaller parts.
 
