--- a/_posts/2018-01-30-ocp.md
+++ b/_posts/2018-01-30-ocp.md
@@ -5,14 +5,19 @@ title: Open/Closed Principle
 
 One of the most common interview questions I have been asked is some version of "What does SOLID stand for and what does each principle mean?" I know there are thousands of articles already covering this subject with dozens more probably being created each week, but I'm going to add to the pile anyway! We're going to take a deeper look at what each of these principles mean, how they should be used, and why they are important. 
 
-This is the second post in the SOLID series. If you missed the first post on the Single Responsibility Principle or just want to go over it again for good measure, that can be found [here]({% post_url 2018-01-28-srp %}).
-
 # What is Solid
 - S stands for Single Responsibility Principle (SRP)
 - **O stands for Open Closed Principle (OCP)**
 - L stands for Liskov Substitution Principle (LSP)
 - I stands for Interface Segregation Principle (ISP)
 - D stands for Dependency Inversion Principle (DIP)
+
+# Background
+You should read my posts on the other SOLID principles for a good understanding.
+
+1. [Single Responsibility Principle]({% post_url 2018-01-28-srp %})
+2. [Open/Closed Principle]({% post_url 2018-01-30-ocp %})
+3. [Liskov Substitution Principle]({% post_url 2018-02-01-lsp %})
 
 # Understanding the Open/Closed Principle
 OCP states that every software entity should be open for extension, but closed for modification. The idea here is that once an entity is completed it should only be modified to fix bugs. If you want to add functional changes such as new features then you should be creating new entities.
