--- a/_posts/2018-02-01-lsp.md
+++ b/_posts/2018-02-01-lsp.md
@@ -13,10 +13,11 @@ One of the most common interview questions I have been asked is some version of 
 - D stands for Dependency Inversion Principle (DIP)
 
 # Background
-You should read my previous posts on SOLID for a good understanding of the first 2 principles
+You should read my posts on the other SOLID principles for a good understanding
 
 1. [Single Responsibility Principle]({% post_url 2018-01-28-srp %})
 2. [Open/Closed Principle]({% post_url 2018-01-30-ocp %})
+3. [Liskov Substitution Principle]({% post_url 2018-02-01-lsp %})
 
 # Understanding the Liskov Substitution Principle
 The Liskov Substitution Principle is an extension to Polymorphism. It states that, when using polymorphism, instances of the subtypes should be substitutable for the supertype *without altering the correctness of that program*. 
