--- a/_posts/2018-01-30-ocp.md
+++ b/_posts/2018-01-30-ocp.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Open/Closed Principle
+category: fundamentals
+tags: SOLID
 ---
 
 One of the most common interview questions I have been asked is some version of "What does SOLID stand for and what does each principle mean?" I know there are thousands of articles already covering this subject with dozens more probably being created each week, but I'm going to add to the pile anyway! We're going to take a deeper look at what each of these principles mean, how they should be used, and why they are important. 
@@ -18,6 +20,7 @@ You should read my posts on the other SOLID principles for a good understanding.
 1. [Single Responsibility Principle]({% post_url 2018-01-28-srp %})
 2. [Open/Closed Principle]({% post_url 2018-01-30-ocp %})
 3. [Liskov Substitution Principle]({% post_url 2018-02-01-lsp %})
+4. [Dependency Inversion Principle]({% post_url 2018-02-28-isp %})
 
 # Understanding the Open/Closed Principle
 OCP states that every software entity should be open for extension, but closed for modification. The idea here is that once an entity is completed it should only be modified to fix bugs. If you want to add functional changes such as new features then you should be creating new entities.
