--- a/_posts/2018-01-28-srp.md
+++ b/_posts/2018-01-28-srp.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Single Responsibility Principle
+category: fundamentals
+tags: SOLID
 ---
 
 One of the most common interview questions I have been asked is some version of "What does SOLID stand for and what does each principle mean?" I know there are thousands of articles already covering this subject with dozens more probably being created each week, but I'm going to add to the pile anyway! We're going to take a deeper look at what each of these principles mean, how they should be used, and why they are important. 
@@ -22,6 +24,7 @@ You should read my posts on the other SOLID principles for a good understanding.
 1. [Single Responsibility Principle]({% post_url 2018-01-28-srp %})
 2. [Open/Closed Principle]({% post_url 2018-01-30-ocp %})
 3. [Liskov Substitution Principle]({% post_url 2018-02-01-lsp %})
+4. [Dependency Inversion Principle]({% post_url 2018-02-28-isp %})
 
 # Understanding the Single Responsibility Principle
 SRP states that every module or class in an application should have exactly 1 responsibility, and therefore only 1 reason to change. This sounds pretty simple, but achieving that simplicity can get tricky at times. To best understand this principle, let's break it down into its smaller parts.
